--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
-1.0.0 :
-* \o/ !!
+0.9.1 :
+* Bugs corrections
+* Add the ability to create edge like that : node1 << node2 << node3 ...
+* Complete README
 
 0.9.0 :
 * Add fdp example (sample 15)
