--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 * Bugs corrections
 * Add the ability to create edge like that : node1 << node2 << node3 ...
 * Complete README
+* Add a DOT parser. This parser has a lot of limitations. So don't use it in a production context !
 
 0.9.0 :
 * Add fdp example (sample 15)
