--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Gregoire Lejeune <glejeune.lejeune@free.fr>
-
 Brandon Coleman <metrix1978@gmail.com>
+Dave Burt <http://github.com/dburt>
 
 Thanks to :
 
