--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+0.9.3 :
+* Minor bug correction for Windows
+
 0.9.2 :
 * Escape nodes (by Dave Burt)
 * Handle errors from graphviz command (by Dave Burt)
