--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 0.9.3 :
 * Minor bug correction for Windows
 * Use Open3.popen3 if installed, else use IO.popen (by Dave Burt)
+* Add '-', '>' and '>>' has aliases of '<<' to create an edge.
 
 0.9.2 :
 * Escape nodes (by Dave Burt)
