--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.9.5 :
+* Remove 'mkmf' dependency
+* GraphViz::Edge#[] modification
+
 0.9.4 :
 * Escape nodes and edges attributs
 * GraphViz::escape corrections (by Dave Burt)
