--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ Gregoire Lejeune <glejeune.lejeune@free.fr>
 Brandon Coleman <metrix1978@gmail.com>
 Dave Burt <http://github.com/dburt>
 Miguel Cabrera <http://mfcabrera.com>
+obruening <http://github.com/obruening>
 
 Thanks to :
 
