Update AUTHORS and ChangeLog

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Brandon Coleman <metrix1978@gmail.com>
 Dave Burt <http://github.com/dburt>
 Miguel Cabrera <http://mfcabrera.com>
 obruening <http://github.com/obruening>
+reactive <http://github.com/reactive>
 
 Thanks to :
 
