--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 0.9.7 :
 * Small bug correction in escape_path_containing_blanks (by Andreas Ronge)
+* New find_executable (by reactive)
 
 0.9.6 :
 * jRuby support (by obruening)
