Add maketext.bat (by Hugh Sasse)

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Dave Burt <http://github.com/dburt>
 Miguel Cabrera <http://mfcabrera.com>
 obruening <http://github.com/obruening>
 reactive <http://github.com/reactive>
+Hugh Sasse <hgs@dmu.ac.uk>
 
 Thanks to :
 
