Update node an graph

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,7 @@ Miguel Cabrera <http://mfcabrera.com>
 obruening <http://github.com/obruening>
 reactive <http://github.com/reactive>
 Hugh Sasse <hgs@dmu.ac.uk>
+axgle <http://github.com/axgle>
 
 Thanks to :
 
