--- a/README.rdoc
+++ b/README.rdoc
@@ -52,6 +52,10 @@ Create a graph from a file
     }
   }.output(:png => "sample.png")
 
+Ruby/GraphViz also include ruby2gv, a simple tool that's allow you to create a dependency graph from a ruby script :
+
+  ruby2gv -Tpng -ogem.png /usr/bin/gem
+
 == INSTALLATION
 
   sudo gem install ruby-graphviz
