--- a/README.rdoc
+++ b/README.rdoc
@@ -4,6 +4,7 @@ Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009 Gregoire Lejeune
 
 * Doc : http://rdoc.info/projects/glejeune/Ruby-Graphviz
 * Sources : http://github.com/glejeune/Ruby-Graphviz
+* Continuous Integration : http://runcoderun.com/glejeune/Ruby-Graphviz
 
 == DESCRIPTION
 
