--- a/ChangeLog.rdoc
+++ b/ChangeLog.rdoc
@@ -1,3 +1,7 @@
+0.9.9 :
+* Issue #9 : The escaping code thinks that a colon ":" is a valid dot identifier when it isn't.
+* Add graph as an accessor to allow you to set global graph attributs (like edge and node)
+
 0.9.8 :
 * Update graph and node posibility to set properties (see sample28.rb)
 * Issue #7: Path option is never being used to find the executable
