Add hipe <http://github.com/hipe> in the author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ obruening <http://github.com/obruening>
 reactive <http://github.com/reactive>
 Hugh Sasse <hgs@dmu.ac.uk>
 axgle <http://github.com/axgle>
+hipe <http://github.com/hipe>
 
 Thanks to :
 
