--- a/README.rdoc
+++ b/README.rdoc
@@ -15,6 +15,8 @@ Interface to the GraphViz graphing tool
 === 0.9.11 :
 * Issue #11 : Cygwin PATH
 * Major bugs correction in output
+* Bug correction in find_executable
+* Add tests (by Chip Malice : http://github.com/hipe)
 * TODO: GraphViz::Parser support block
 * TODO: Issue #12
 
