--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ hipe <http://github.com/hipe>
 Thanks to :
 
 Desmond Dsouza - Windows tests and corrections
+Vidar Hokstad and Ryan Shea - for nothugly.xsl
