--- a/README.rdoc
+++ b/README.rdoc
@@ -245,3 +245,5 @@ This program is distributed without any warranty. See the file
 
 By Vidar Hokstad and Ryan Shea; Contributions by Jonas Tingborn,
 Earl Cummings, Michael Kennedy (Graphviz 2.20.2 compatibility, bug fixes, testing, lots of gradients)
+
+MIT license: http://en.wikipedia.org/wiki/MIT_License
