--- a/README.rdoc
+++ b/README.rdoc
@@ -21,6 +21,8 @@ Interface to the GraphViz graphing tool
 * Add <tt>GraphViz.parser2</tt>. <b>WARNING</b> this method will replace <tt>GraphViz.parser</tt>. So please don't use it, or only for testing.
 * Bug correction in <tt>dot2ruby</tt>
 * Add <tt>--output-format</tt> option to <tt>dot2ruby</tt>
+* Add <tt>git2gv</tt>
+* Issue #16 : escape graph ID
 
 === 0.9.14 :
 * Add dot2ruby script
