--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ reactive <http://github.com/reactive>
 Hugh Sasse <hgs@dmu.ac.uk>
 axgle <http://github.com/axgle>
 hipe <http://github.com/hipe>
+Stefan Huber <http://github.com/MSNexploder>
 
 Thanks to :
 
