JRuby bug correction (by Nigel Thorne)

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Hugh Sasse <hgs@dmu.ac.uk>
 axgle <http://github.com/axgle>
 hipe <http://github.com/hipe>
 Stefan Huber <http://github.com/MSNexploder>
+Nigel Thorne <http://github.com/NigelThorne>
 
 Thanks to :
 
