--- a/README.rdoc
+++ b/README.rdoc
@@ -16,6 +16,9 @@ Interface to the GraphViz graphing tool
 
 == CHANGELOG
 
+=== 0.9.18 :
+* JRuby bug correction (by Nigel Thorne)
+
 === 0.9.17 :
 * GraphViz::Edge#node_one and GraphViz::Edge#node_one now have un optional parameter to indicate if you want to (or not) get the port in the name (default: true)
 * GraphViz#each_node now returns the Hash of nodes if there is no block given.
