Add Rolf Timmermans in AUTHORS - Thanks to him

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ axgle <http://github.com/axgle>
 hipe <http://github.com/hipe>
 Stefan Huber <http://github.com/MSNexploder>
 Nigel Thorne <http://github.com/NigelThorne>
+Rolf Timmermans <http://github.com/rolftimmermans>
 
 Thanks to :
 
