Add strict digraph support

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ hipe <http://github.com/hipe>
 Stefan Huber <http://github.com/MSNexploder>
 Nigel Thorne <http://github.com/NigelThorne>
 Rolf Timmermans <http://github.com/rolftimmermans>
+Jonas Elfström <http://github.com/jonelf>
 
 Thanks to :
 
