Major bug correction in GraphViz#output for subgraphs

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@ Stefan Huber <http://github.com/MSNexploder>
 Nigel Thorne <http://github.com/NigelThorne>
 Rolf Timmermans <http://github.com/rolftimmermans>
 Jonas Elfström <http://github.com/jonelf>
+oupo <http://github.com/oupo>
 
 Thanks to :
 
