--- a/README.rdoc
+++ b/README.rdoc
@@ -14,7 +14,30 @@ Interface to the GraphViz graphing tool
 
 * New FamilyTree
 
+== WARNING
+
+<b>We are close to the 1.0 version... So if you use one of the following method or attribut, please update your code because they will be remove.</b>
+
+* GraphViz::Node#name must be replaced by GraphViz::Node#id
+* A html attribut must be replaced by a label attribut (<tt>:label => '<<html/>>'</tt>)
+* :output option must be replaced by :<format> => :<file>
+* :file option must be replaced by :<format> => :<file>
+
 == CHANGELOG
+
+=== 0.9.21 :
+* Add attributs "label_scheme" and "rotation"
+* Add missing options :
+** <tt>:scale => v</tt> : Scale input by 'v' (=72)
+** <tt>:inverty => [true|false]</tt> : Invert y coordinate in output
+** <tt>:no_layout => v</tt> : No layout mode 'v' (=1) -- neato only
+** <tt>:reduce => [true|false]</tt> : Reduce graph -- neato only
+** <tt>Lg => [true|false]</tt> : Don't use grid -- fdp only
+** <tt>LO => [true|false]</tt> : Use old attractive force -- fdp only
+** <tt>Ln => i</tt> : Set number of iterations to i -- fdp only
+** <tt>LU => i</tt> : Set unscaled factor to i -- fdp only
+** <tt>LC => v</tt> : Set overlap expansion factor to v -- fdp only
+** <tt>LT => [*]v</tt> : Set temperature (temperature factor) to v -- fdp only
 
 === 0.9.20 :
 * Add GraphViz#each_attribut, Node#each_attribut and Edge#each_attribut
